--- a/thank-you.html
+++ b/thank-you.html
@@ -44,7 +44,7 @@
         <h1>Thank You!</h1>
         <p>Your message has been received. We appreciate your effort to reach out to us.</p>
         <p>We'll get back to you as soon as possible.</p>
-        <a href="./Portfolio.html">Return to Home</a>
+        <a href="./index.html">Return to Home</a>
     </div>
 </body>
 </html>
